--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@ url: http://www.colinhho.com
 title: Colin H. Ho
 email: me@colinhho.com
 author: Colin H. Ho
-description: > # "Write an awesome description for your new site here.
-  Colin is a medical student currently living in Sydney, Australia.
-  Contact Colin from their page.
+description: 'Colin is a medical student in Sydney, Australia. Contact Colin from their page.'
 copyright: 'Copyright &copy; 2016 Colin H. Ho. All Rights Reserved.'
 credits: ''
 
